--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
         <module>book-service</module>
         <module>borrow-service</module>
         <module>user-service</module>
+        <module>commons</module>
     </modules>
 
     <parent>
